tdf#120015, don't crash without major tick marks

Change-Id: Icac79eb1c0c47388f96d37d2921c81fb6c848607
Reviewed-on: https://gerrit.libreoffice.org/60948
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 217cb86dd06f0c539d6181d9b7fd0d71c4edd628)